--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.sign-out {
+    display: flex;
+    justify-content: flex-start;
+    
+    
+    margin-top: 20px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .sign-out button {
+    padding: 10px 20px;
+    background-color: #289cc2;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .sign-out button:hover {
+    background-color: #6ad873;
   }
-}
+  
